test(expressions): demonstrate behavior of SpEL expression evaluation (#1195)
that uses a non-public constructor/method, and so requires special treatment under java 17.